--- a/ColorNote Backup Viewer/GUI Prototype/NullView.xaml
+++ b/ColorNote Backup Viewer/GUI Prototype/NullView.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="ColorNote_Backup_Viewer.GUI_Prototype.NotesView"
+﻿<UserControl x:Class="ColorNote_Backup_Viewer.GUI_Prototype.NullView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ColorNote_Backup_Viewer.GUI_Prototype"
              mc:Ignorable="d" 
-             d:DesignHeight="390" d:DesignWidth="470">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <local:MemoListView></local:MemoListView>
+            
     </Grid>
 </UserControl>
