--- a/ColorNote Backup Viewer/App.xaml
+++ b/ColorNote Backup Viewer/App.xaml
@@ -2,8 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ColorNote_Backup_Viewer"
-             StartupUri="MainWindow.xaml">
+             xmlns:view="clr-namespace:ColorNote_Backup_Viewer.View"
+             xmlns:viewmodel="clr-namespace:ColorNote_Backup_Viewer.ViewModel"
+             
+             Startup="Application_Startup">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type viewmodel:OpenFilesMenuViewModel}">
+            <view:OpenFilesMenu/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodel:MemoViewViewModel}">
+            <view:MemoView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
