[FEAT] 달력 메모 보기 및 메모내용 표시 기능 구현

--- a/ColorNote Backup Viewer/App.xaml
+++ b/ColorNote Backup Viewer/App.xaml
@@ -13,5 +13,11 @@
         <DataTemplate DataType="{x:Type viewmodel:MemoViewViewModel}">
             <view:MemoView/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodel:ListViewViewModel}">
+            <view:ListView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodel:CalendarViewViewModel}">
+            <view:CalendarView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
