--- a/ColorNote Backup Viewer/MainWindow.xaml
+++ b/ColorNote Backup Viewer/MainWindow.xaml
@@ -30,7 +30,7 @@
                     </TextBlock>
                 </Button>
                 <TextBlock Text="{Binding fileName}" Grid.Column="1" FontSize="20" VerticalAlignment="Center" Margin="10,0,0,0"/>
-                <Button Grid.Column="1" FontSize="14" Height="35" Width="100" Margin="0,0,7,0" HorizontalAlignment="Right">
+                <Button Grid.Column="1" FontSize="14" Height="35" Width="100" Margin="0,0,7,0" HorizontalAlignment="Right" Click="EH_ChangeViewTypeButtonClick">
                     <Button.Style>
                         <Style TargetType="Button">
                             <Style.Triggers>
