--- a/ColorNote Backup Viewer/View/ListView.xaml
+++ b/ColorNote Backup Viewer/View/ListView.xaml
@@ -40,6 +40,7 @@
                     <Setter Property="Margin" Value="0,1"/>
                     <Setter Property="MaxWidth" Value="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType={x:Type ListBox}}}"/>
                     <EventSetter Event="MouseDoubleClick" Handler="EH_ItemDoubleClicked"/>
+                    <EventSetter Event="MouseRightButtonUp" Handler="EH_ExportMouseRightClick"/>
                 </Style>
             </ListBox.ItemContainerStyle>
             <ListBox.ItemTemplate>
@@ -52,6 +53,13 @@
 
                         <TextBlock Grid.Column="0" Text="{Binding title}" FontSize="14" TextTrimming="CharacterEllipsis"></TextBlock>
                         <TextBlock Grid.Column="1" Text="{Binding date_display}" FontSize="14" Margin="5,0,5,0" HorizontalAlignment="Right"></TextBlock>
+
+                        <Popup x:Name="ExportPopup" StaysOpen="False" Placement="MousePoint">
+                            <StackPanel Background="LightGray">
+                                <Button Content="텍스트 파일로 내보내기"/>
+                                <Button Content="HTML 파일로 내보내기"/>
+                            </StackPanel>
+                        </Popup>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
