[FEAT] 파일 열기 최대 갯수 제한 적용

--- a/ColorNote Backup Viewer/View/OpenFilesMenu.xaml
+++ b/ColorNote Backup Viewer/View/OpenFilesMenu.xaml
@@ -13,7 +13,7 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Button Margin="6" Content="+ 새 파일 열기" FontSize="15" Click="EH_NewFileOpenButtonClick"/>
+            <Button Margin="6" Content="+ 새 파일 열기" FontSize="15" Click="EH_NewFileOpenButtonClick" IsEnabled="{Binding addButtonEnable}"/>
             <ListBox Margin="6,0,6,6" Grid.Row="1" BorderThickness="1" BorderBrush="Black"
                      ItemsSource="{Binding memoFilesData.openFilesList}"
                      SelectedIndex="{Binding selectedIdx, Mode=OneWayToSource}">
