--- a/ColorNote Backup Viewer/View/ListView.xaml
+++ b/ColorNote Backup Viewer/View/ListView.xaml
@@ -34,10 +34,11 @@
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalContentAlignment" Value="Stretch"/>
                     <Setter Property="BorderBrush" Value="Black"/>
                     <Setter Property="BorderThickness" Value="1"/>
-                    <Setter Property="Height" Value="30"/>
-                    <Setter Property="Background" Value="#FFFFE1BD"/>
+                    <Setter Property="Height" Value="40"/>
+                    <Setter Property="Padding" Value="0"/>
                     <Setter Property="Margin" Value="0,1"/>
                     <Setter Property="MaxWidth" Value="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType={x:Type ListBox}}}"/>
                     <EventSetter Event="MouseDoubleClick" Handler="EH_ItemDoubleClicked"/>
@@ -46,15 +47,50 @@
             </ListBox.ItemContainerStyle>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition Width="auto"/>
-                        </Grid.ColumnDefinitions>
+                    <Border>
+                        <Border.Style>
+                            <Style TargetType="Border">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding color}" Value="1">
+                                        <Setter Property="Background" Value="#ffe6e9"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding color}" Value="2">
+                                        <Setter Property="Background" Value="#ffebd8"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding color}" Value="3">
+                                        <Setter Property="Background" Value="#fef8ba"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding color}" Value="4">
+                                        <Setter Property="Background" Value="#e5f8dc"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding color}" Value="5">
+                                        <Setter Property="Background" Value="#e8e9fe"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding color}" Value="6">
+                                        <Setter Property="Background" Value="#efe0ff"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding color}" Value="7">
+                                        <Setter Property="Background" Value="#cccccc"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding color}" Value="8">
+                                        <Setter Property="Background" Value="#eeeeee"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding color}" Value="9">
+                                        <Setter Property="Background" Value="#ffffff"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Border.Style>
+                        <Grid Margin="8,0" VerticalAlignment="Center">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
 
-                        <TextBlock Grid.Column="0" Text="{Binding title}" FontSize="14" TextTrimming="CharacterEllipsis"></TextBlock>
-                        <TextBlock Grid.Column="1" Text="{Binding date_display}" FontSize="14" Margin="5,0,5,0" HorizontalAlignment="Right"></TextBlock>
-                    </Grid>
+                            <TextBlock Grid.Column="0" Text="{Binding title}" FontSize="14" TextTrimming="CharacterEllipsis"/>
+                            <TextBlock Grid.Column="1" Text="{Binding date_display}" FontSize="14" Margin="5,0,5,0" HorizontalAlignment="Right"/>
+                        </Grid>
+                    </Border>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
