[FIX] 변수명 변경 후 바인딩 오류 수정

--- a/ColorNote Backup Viewer/MainWindow.xaml
+++ b/ColorNote Backup Viewer/MainWindow.xaml
@@ -69,7 +69,7 @@
                         </TextBlock.RenderTransform>
                     </TextBlock>
                 </Button>
-                <ContentControl Content="{Binding openFilesView}" FlowDirection="LeftToRight"/>
+                <ContentControl Content="{Binding VM_OpenFilesView}" FlowDirection="LeftToRight"/>
             </StackPanel>
             <Border.Style>
                 <Style TargetType="Border">
